--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <title>Guessing Game </title>
-    <link rel="stylesheet" type="text/css" href="/Users/MaxJacobsen/CodeFellows/repository/AboutMeGuessingGame/guessAboutMe.css">
+    <link rel="stylesheet" type="text/css" href="guessAboutMe.css">
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <a href="https://youtu.be/bHAMG87YTgY"> <img id="mainphoto" src="https://scontent.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/1662057_10203820724219819_4703217107229665133_n.jpg?oh=f8121a21a780be01437d1e1920fd82a5&oe=56B943AA">
     </a>
 
-    <script language="javascript" type="text/javascript" src="/Users/MaxJacobsen/CodeFellows/repository/AboutMeGuessingGame/guess.js">
+    <script language="javascript" type="text/javascript" src="guess.js">
     </script>
 
   </body>
