--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <input id="StartQuiz" class="buttonstart" type="button" value="Start Quiz" onclick="startquiz();"/>
 
+<p class="alerts" id="alert1"></p>
+<p class="alerts" id="alert2"></p>
+<p class="alerts" id="alert3"></p>
+
+
     <a href="https://youtu.be/bHAMG87YTgY"> <img id="mainphoto" src="https://scontent.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/1662057_10203820724219819_4703217107229665133_n.jpg?oh=f8121a21a780be01437d1e1920fd82a5&oe=56B943AA">
     </a>
 
