--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <html lang="en-US">
 
   <head>
+
     <title>Guessing Game </title>
-    <link rel="stylesheet" type="text/css" href="/Users/MaxJacobsen/CodeFellows/repository/AboutMeGuessingGame/guessAboutMe.css">
+
+    <link rel="stylesheet" type="text/css" href="guessAboutMe.css">
+    
   </head>
 
   <body>
+
     <h1 id="MainHeading"> Guessing Game </h1>
-      <p id="FirstParagraph"> Here is a quiz consisting of 3 yes or no questions.<br /> These questions are designed to tell you a little more about me. </p>
+    <p id="FirstParagraph"> Here is a quiz consisting of 3 yes or no questions. <br />
+        These questions are designed to tell you a little more about me. </p>
 
     <input id="StartQuiz" class="buttonstart" type="button" value="Start Quiz" onclick="startquiz();"/>
 
-    <a href="https://youtu.be/bHAMG87YTgY"> <img id="mainphoto" src="https://scontent.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/1662057_10203820724219819_4703217107229665133_n.jpg?oh=f8121a21a780be01437d1e1920fd82a5&oe=56B943AA">
+    <a href="https://youtu.be/bHAMG87YTgY"> <img id="mainphoto"
+      src="https://scontent.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/1662057_10203820724219819_4703217107229665133_n.jpg?oh=f8121a21a780be01437d1e1920fd82a5&oe=56B943AA">
     </a>
 
-    <script language="javascript" type="text/javascript" src="/Users/MaxJacobsen/CodeFellows/repository/AboutMeGuessingGame/guess.js">
-    </script>
+    <script language="javascript" type="text/javascript" src="guess.js"> </script>
 
   </body>
 
