youtube video is now hidden until after questions are all answered

--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
 <p class="alerts" id="alert2"></p>
 <p class="alerts" id="alert3"></p>
 <p class="alerts" id="finalalert"></p>
-
-
-
-
-    <p> <iframe id="PainfulVideo" src="https://www.youtube.com/embed/bHAMG87YTgY" frameborder="0" allowfullscreen></iframe></p>
-    <script language="javascript" type="text/javascript" src="guess.js">
-    </script>
-
-  </body>
-
+<script language="javascript" type="text/javascript" src="guess.js"></script>
+</body>
 </html>
  
