Adding Questions to DOM

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p id="FirstParagraph"> Here is a quiz consisting of 3 yes or no questions.<br /> These questions are designed to tell you a little more about me. </p>
 
     <input id="StartQuiz" class="buttonstart" type="button" value="Start Quiz" onclick="startquiz();"/>
-
+<p class="alerts" id="questions"></p>
 <p class="alerts" id="alert1"></p>
 <p class="alerts" id="alert2"></p>
 <p class="alerts" id="alert3"></p>
