Users Answer now displayed.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <h1 id="MainHeading"> Guessing Game </h1>
-      <p id="FirstParagraph"> Here is a quiz consisting of 3 yes or no questions.<br />
+      <p id="FirstParagraph">Hello, my name is Max Jacobsen. Here is a quiz consisting of 3 yes or no questions.<br />
         These questions are designed to tell you a little more about me. </p>
     <input id="StartQuiz" class="buttonstart" type="button" value="Start Quiz" onclick="startquiz();">
 
